2018-04-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/pdf.R (tintPdf): Set default to 'tango'

2018-04-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Mention tintBook

2018-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor release

2018-03-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/pdf.R (tintBook): Minimal wrapper for tufte-book
	* R/html.R: Added few words to roxygen for tintBook()
	* man/tintHtml.Rd: Ditto
	* inst/rmarkdown/templates/pdf/resources/tintBook-template.tex:
	  template used in new style
	* NAMESPACE: Export tintBook()

2018-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.5

	* vignettes/tintHTML.Rmd (knitr): Modified geom_smooth calls to
	not require mgcv as a hidden dependency
	* vignettes/tintPDF.Rmd (knitr): Idem

2017-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simple.R: Condition html rendering test on being on Linux or
	Windows as CRAN uses some seriously dated pandoc binaries elsewere

2017-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

2017-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/tintPDF.Rmd (vignette): New PDF vignette
	* vignettes/tintHTML.Rmd (vignette): New HTML vignette

	* DESCRIPTION: Added 'VignetteDriver: knitr', 'Suggests: ggplot2'
	* .travis.yml (install): Also install r-cran-ggplot2

	* inst/examples/simplePdf.Rmd: Refer to tint source
	* inst/examples/simpleHtml.Rmd: Idem
	* inst/rmarkdown/templates/pdf/skeleton/skeleton.Rmd: Idem

2017-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* R/pdf.R (tintPdf): More default argument
	* inst/examples/simplePdf.Rmd: Shorter YAML frontmatter
	* inst/examples/simpleHtml.Rmd: Idem
	* inst/rmarkdown/templates/pdf/skeleton/skeleton.Rmd: Idem
	* inst/rmarkdown/templates/html/skeleton/skeleton.Rmd: Idem

2017-10-31  Ben Marwick  <benmarwick@hotmail.com>

	* inst/rmarkdown/templates/html/skeleton/skeleton.Rmd: Reference