@@ -14,14 +14,14 @@ tintBook <- function(fig_width = 4, fig_height = 2.5, fig_crop = TRUE,
                     citation_package = 'natbib', latex_engine = 'pdflatex', ...) {
     tintPdfCreate('tufte-book', fig_width, fig_height, fig_crop,
                   dev, highlight, citation_package,
-                  template_resources("pdf", "tintBook-template.tex"), ...)
+                  template_resources("tintBook", "tintBook-template.tex"), ...)
 }
 
 
 tintPdfCreate <- function(documentclass = c('tufte-handout', 'tufte-book'),
                           fig_width = 4, fig_height = 2.5, fig_crop = TRUE,
                           dev = 'pdf', highlight = 'default', citation_package = 'natbib',
-                          template = template_resources('pdf', 'tintPdf-template.tex'), ...) {
+                          template = template_resources('tintPdf', 'tintPdf-template.tex'), ...) {
 
     ## resolve default highlight
     if (identical(highlight, 'default')) highlight = 'pygments'
